# Celery-Redis-TaskQueue

./: .cursorignore  README.md  docker-compose.yaml  pyproject.toml
.specstory/history/: 2025-03-26_03-14-next-js-and-bun-frontend-task-submission.md  2025-03-26_07-05-task-status-update-issue.md  2025-03-26_08-55-refactoring-taskitem-component-features.md  2025-03-26_09-19-debugging-multiple-sse-subscription-requests.md  2025-03-26_10-47-project-wise-docker-compose-configuration.md  2025-03-26_12-21-mermaid-system-architecture-for-readme.md
backend/: Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py  worker.py
backend/app/: main.py
backend/app/api/: models.py  routes.py
backend/app/core/: celery_app.py  config.py
backend/app/tasks/: __init__.py  dummy_tasks.py  tasks.py
frontend/: Dockerfile  README.md
frontend/app/: bun.lockb  package.json
frontend/app/src/: middleware.ts
frontend/app/src/app/: page.tsx
frontend/app/src/components/: TaskItem.tsx  TaskManager.tsx
